--- a/.github/workflows/run-creator.yml
+++ b/.github/workflows/run-creator.yml
@@ -29,6 +29,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       
       # Set the COMMIT_ID env variable
       - name: Set the Commit Id
